methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs: error: too many arguments for method move: (nbPas: Int)Boolean
		move(getY(),getDirection() == Direction.NORTH); 
                    ^MethodsArgs:4: error: not found: value verslAvant
  if (verslAvant==true){
      ^