methods.args.MethodsArgs.scala.code
def move(nbPas: Int): Boolean={
  var versLavant:Boolean=false
  if (verslAvant==true){
    avance(nbPas)
  }
  else{
    recule()
  }
  return versLavant
}